--- a/testMini.html
+++ b/testMini.html
@@ -16,13 +16,13 @@
 			}
 
 			function btnAction() {
-				ft.miniProgram.sendWebviewEvent({
+				miniProgram.sendWebviewEvent({
   					test: 123
 				})
 			}
 
 			function openAction() {
-				ft.miniProgram.navigateTo({ url: '/pages/index/index' })
+				miniProgram.navigateTo({ url: '/pages/index/index' })
 			}
 		</script>
 
