--- a/testMini.html
+++ b/testMini.html
@@ -76,7 +76,7 @@
 		</myElement>
 		content of  the document
 		<button type="submit" id="btn_submit" οnclick="btnAction()">发送事件给小程序</button>
-		<button type="submit" id="btn_submit" οnclick="openAction()">打开小程序</button>
+		<button type="submit1" id="btn_submit1" οnclick="openAction()">打开小程序</button>
 
 		<!-- <article>
 			London is the capital city of England. 
