--- a/testMini.html
+++ b/testMini.html
@@ -6,10 +6,15 @@
 			
 			document.createElement("myElement")
 
-			function getMini(params){
-				console.log("======getMini=======")
-				var result = params.a + params.b 
-				return result
+			// function getMini(params){
+			// 	console.log("======getMini=======")
+			// 	var result = params.a + params.b 
+			// 	return result
+			// }
+
+			function getMini(params,params1){
+  				console.log("getMini" + params);
+  				return params + params1
 			}
 
 		</script>
