--- a/testMini.html
+++ b/testMini.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">	
+		<script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
+		<script>
+  			// VConsole will be exported to `window.VConsole` by default.
+  			var vConsole = new window.VConsole();
+		</script>
+		
 		<script type="text/javascript">
 			
 			document.createElement("myElement")
