--- a/testMini.html
+++ b/testMini.html
@@ -7,7 +7,7 @@
   			// VConsole will be exported to `window.VConsole` by default.
   			var vConsole = new window.VConsole();
 		</script>
-		
+
 		<script type="text/javascript">
 			
 			document.createElement("myElement")
@@ -33,6 +33,7 @@
 
 
 		<script type="text/javascript">
+			import ft from 'finclip-js-sdk'
 
 			function btnAction() {
 				console.log("======btnAction=======")
