--- a/testMini.html
+++ b/testMini.html
@@ -31,7 +31,7 @@
 
 
 		<script type="text/javascript">
-			import ft from 'finclip-js-sdk'
+			// import ft from 'finclip-js-sdk'
 
 			function btnAction() {
 				console.log("======btnAction=======")
