--- a/testMini.html
+++ b/testMini.html
@@ -5,12 +5,14 @@
 		<script type="text/javascript" src="finclip.js">
 			
 		</script>
+		<script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.1/vconsole.min.js"></script>
+  		<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.1/vconsole.min.css">
 		
-		<script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
+		<!-- <script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
 		<script>
   			// VConsole will be exported to `window.VConsole` by default.
   			var vConsole = new window.VConsole();
-		</script>
+		</script> -->
 
 		<script type="text/javascript">
 			
@@ -77,6 +79,14 @@
 	<body>
 
 		<script src="test.js"></script>
+
+		<script>
+    	// 创建vConsole实例
+    	var vConsole = new VConsole();
+
+    	// 输出日志信息
+    	console.log('Hello, vConsole!');
+  		</script>
 
 		<header>
   			<h1>HTML5 SKeleton</h1>
