--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
 <body>
   <h1>Click Event Example</h1>
   <button onclick="handleClick()">Click me</button>
-  <button οnclick="btnAction()">发送事件给小程序</button>
-	<button οnclick="openAction()">打开小程序</button>
+  <button onclick="btnAction()">发送事件给小程序</button>
+  <button onclick="openAction()">打开小程序</button>
 </body>
 </html>
