--- a/testMini.html
+++ b/testMini.html
@@ -30,7 +30,10 @@
   				console.log('getMini' + params);
   				return params + params1
 			}
-
+			function getMini(params){
+  				console.log('getMini');
+  				return params + 'from_H5'
+			}
 		</script>
 
 		<script >
