--- a/testMini.html
+++ b/testMini.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">	
-		<script src="finclip.js">
+		<!-- <script src="finclip.js"> -->
 			
 		</script>
 		<script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.1/vconsole.min.js"></script>
+		<script src="https://public-1251849568.cos.ap-guangzhou.myqcloud.com/jssdk/finclip-jssdk-1.4.11.js"></script>
   		<!-- <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.1/vconsole.min.css"> -->
 		<script>
     	// 创建vConsole实例
