--- a/testMini.html
+++ b/testMini.html
@@ -50,6 +50,7 @@
 			ft.registNativeAPIHandler('getMini', function(res) {
   				// app2jsFunction callback
 				console.log(res);
+				return 'From_H5_Call'
 			})
 
 			// 创建vConsole实例
